Rigid bodyfield weights not working.?? #41295

Closed
opened 2014-08-02 16:23:17 +02:00 by Iwaniuk · 12 comments

System Information
windows 8.1 64bit
nvidia geforce 9500gt

Blender Version:2.71 2014-06-25 18:36 hash 9337574

Exact steps for others to reproduce the error:
1.Create any object plane and cube
2.Go to physic panel and click add acive to cube an add passive to plane
3.Go to a icon World panel to rigid bodyfield weights effector group to click Rigid body World then gravity panel press to 0 (zero)
4.Press Crtl+a and cube just falls(gravity is zero why falls?)

5.Add a wind force(strength to 500) to scene and click effector to zero force acts on Cube???

System Information windows 8.1 64bit nvidia geforce 9500gt Blender Version:2.71 2014-06-25 18:36 hash 9337574 Exact steps for others to reproduce the error: 1.Create any object plane and cube 2.Go to physic panel and click add acive to cube an add passive to plane 3.Go to a icon World panel to rigid bodyfield weights effector group to click Rigid body World then gravity panel press to 0 (zero) 4.Press Crtl+a and cube just falls(gravity is zero why falls?) 5.Add a wind force(strength to 500) to scene and click effector to zero force acts on Cube???
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mariuszi28cg

Added subscriber: @mariuszi28cg
Author
[bug.blend](https://archive.blender.org/developer/F101186/bug.blend)

Added subscriber: @zeauro

Added subscriber: @zeauro

hash 9c3025c

For me, cube does not fall. But it is still not moving if I set gravity to 1.

Refreshing of rigid body cache is really bad.
I have to select one rigid body, start to move it and then cancel deplacement to update any setting.

With a blend from scratch, force field seems to be taken into account if it is added after rigid body world creation.

In your blend, I am able to make wind force field working, only if I add it to rigid body world group.

hash 9c3025c For me, cube does not fall. But it is still not moving if I set gravity to 1. Refreshing of rigid body cache is really bad. I have to select one rigid body, start to move it and then cancel deplacement to update any setting. With a blend from scratch, force field seems to be taken into account if it is added after rigid body world creation. In your blend, I am able to make wind force field working, only if I add it to rigid body world group.
Author

"zeauro" -> your are right in ->"With a blend from scratch, force field seems to be taken into account if it is added after rigid body world creation." and -> "I have to select one rigid body, start to move it and then cancel deplacement to update any setting."

but rest to update any setting and press CTRL+A (animations) should be refreshed in real-time but it is not. :(

"zeauro" -> your are right in ->"With a blend from scratch, force field seems to be taken into account if it is added after rigid body world creation." and -> "I have to select one rigid body, start to move it and then cancel deplacement to update any setting." but rest to update any setting and press CTRL+A (animations) should be refreshed in real-time but it is not. :(
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I can't reproduce this on current master (ee8dafe, don't think any major physics changes happened in the meantime though). The rigidbody cache system can act weirdly sometimes, but with the procdure you described i'm not getting any unexpected behavior.

I can't reproduce this on current master (ee8dafe, don't think any major physics changes happened in the meantime though). The rigidbody cache system can act weirdly sometimes, but with the procdure you described i'm not getting any unexpected behavior.
Author

In this video file(is explanation) i'm testing Blender 2.71 hash 37c56e1

Sorry don't have microfone.

rigid_body-Bug.avi

In this video file(is explanation) i'm testing Blender 2.71 hash 37c56e1 Sorry don't have microfone. [rigid_body-Bug.avi](https://archive.blender.org/developer/F102206/rigid_body-Bug.avi)

This issue was referenced by 3cd2c6145a

This issue was referenced by 3cd2c6145ae12956757141a1ea1f58f5eddf0db1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3cd2c6145a.

Closed by commit 3cd2c6145a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41295
No description provided.