Fix T41295: Rigid bodyfield weights not working.??

Looks like `rna_EffectorWeight_update()` was not really working, now uses same kind of code
as `rna_Physics_update()` from rna_scene.c.